--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-aria": "~1.5.7",
     "angular-material": "~1.1.0-rc.5",
     "angular-ui-router": "~0.3.1",
+    "font-awesome": "~4.6.3",
     "jquery": "~3.1.0"
   },
   "devDependencies": {
